RESOLVED FIXED192706
getSenders/getReceivers() should not return closed transceiver senders/receivers
https://bugs.webkit.org/show_bug.cgi?id=192706
Summary getSenders/getReceivers() should not return closed transceiver senders/receivers
youenn fablet
Reported 2018-12-14 10:48:26 PST
getSenders/getReceivers() should not return closed transceiver senders/receivers
Attachments
Patch (11.69 KB, patch)
2018-12-14 11:02 PST, youenn fablet
no flags
youenn fablet
Comment 1 2018-12-14 11:02:33 PST
Radar WebKit Bug Importer
Comment 2 2018-12-14 11:03:44 PST
youenn fablet
Comment 3 2018-12-14 11:04:04 PST
Submitted web-platform-tests pull request: https://github.com/web-platform-tests/wpt/pull/14530
WebKit Commit Bot
Comment 4 2018-12-14 15:52:48 PST
Comment on attachment 357324 [details] Patch Clearing flags on attachment: 357324 Committed r239238: <https://trac.webkit.org/changeset/239238>
WebKit Commit Bot
Comment 5 2018-12-14 15:52:50 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.