Source/WebCore/Modules/mediastream/RTCPeerConnection.cpp
@@ -114,8 +114,8 @@ ExceptionOr<Ref<RTCRtpSender>> RTCPeerConnection::addTrack(Ref<MediaStreamTrack>
     if (isClosed())
         return Exception { InvalidStateError };
 
-    for (RTCRtpSender& sender : m_transceiverSet->senders()) {
-        if (sender.trackId() == track->id())
+    for (auto& transceiver : m_transceiverSet->list()) {
+        if (transceiver->sender().trackId() == track->id())
             return Exception { InvalidAccessError };
     }
 
@@ -641,13 +641,13 @@ void RTCPeerConnection::generateCertificate(JSC::ExecState& state, AlgorithmIden
     PeerConnectionBackend::generateCertificate(document, parameters.returnValue(), WTFMove(promise));
 }
 
-const Vector<std::reference_wrapper<RTCRtpSender>>& RTCPeerConnection::getSenders() const
+Vector<std::reference_wrapper<RTCRtpSender>> RTCPeerConnection::getSenders() const
 {
     m_backend->collectTransceivers();
     return m_transceiverSet->senders();
 }
 
-const Vector<std::reference_wrapper<RTCRtpReceiver>>& RTCPeerConnection::getReceivers() const
+Vector<std::reference_wrapper<RTCRtpReceiver>> RTCPeerConnection::getReceivers() const
 {
     m_backend->collectTransceivers();
     return m_transceiverSet->receivers();
